# SGNFood

./: .cproject  .project  CMakeLists.txt
aura/assets/: faq.xls.xlsx
aura/db/: sgn_aura.db
include/: BaseButton.h  Checkout.h  Constants.h  DBInterface.h  EditMenu.h  FAQs.h  HttpClient.h  MyAddress.h  OrderMgmt.h  PriceChange.h  ProductList.h  QuickMenu.h  SGNAdmin.h  SGNParser.h  SingleOrder.h  SpecialList.h  Utils.h  Version.h  ViewCart.h  WalletMgmt.h
mani_mama/db/: sgn_mani.db
misce/: rsync-key  rsync-key.pub  sgnsync.sh
src/: Checkout.cpp  DBInterface.cpp  Daemon.cpp  EditMenu.cpp  FAQs.cpp  HttpClient.cpp  MyAddress.cpp  OrderMgmt.cpp  PriceChange.cpp  ProductList.cpp  QuickMenu.cpp  SGNAdmin.cpp  SGNParser.cpp  SingleOrder.cpp  SpecialList.cpp  ViewCart.cpp  WDog.cpp  WalletMgmt.cpp
viva/db/: sgn_viva.db
